--- a/plugin.xml
+++ b/plugin.xml
@@ -87,10 +87,15 @@
             <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 			<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
             <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+                <permission
+        android:name="com.unarin.cordova.beacon.permission.TRUST"
+        android:label="TRUST"
+        android:protectionLevel="signatureOrSystem" />
         </config-file>
 
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
-			<receiver android:name="org.altbeacon.beacon.startup.StartupBroadcastReceiver" >
+			<receiver android:name="org.altbeacon.beacon.startup.StartupBroadcastReceiver" 
+			android:permission="com.unarin.cordova.beacon.permission.TRUST" >
 				<intent-filter>
 					<action android:name="android.intent.action.BOOT_COMPLETED" />
 					<action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
@@ -98,12 +103,14 @@
 				</intent-filter>
 			</receiver>
             <service android:enabled="true"
-                     android:exported="true"
+                     android:exported="false"
                      android:isolatedProcess="false"
                      android:label="iBeacon"
                      android:name="org.altbeacon.beacon.service.BeaconService">
             </service>
             <service android:enabled="true"
+                     android:exported="false"
+                     android:permission="com.unarin.cordova.beacon.permission.TRUST"
                      android:name="org.altbeacon.beacon.BeaconIntentProcessor">
                 <meta-data android:name="background" android:value="true" />
                 <intent-filter android:priority="1" >
